--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
         <!-- Phần đầu -->
     <head>
+        <link rel="icon" href="img\Logo.png" type="imgae/x-icon">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bamboo Restaurant</title>
